Just to push and pull

--- a/iTrainee.MVC/Areas/Admin/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/index.cshtml
@@ -4,9 +4,10 @@
 
 <head>
     <style>
-/*        .admin-dashboard-container {
-            width: 850px;
-        }*/
+        .admin-dashboard-container {
+            margin: auto;
+            width: 90%;
+        }
         .card {
             border-top: 3px solid hsl(212, 86%, 64%);
         }
@@ -33,7 +34,7 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Mentor</h5>
-        <p class="card-text">Mentor is an advisor, counselor, or guide to a trainee. Click to create, update or delete a mentor</p>
+        <p class="card-text">Mentor is an advisor, counselor, or guide to a trainee. The mentor provides support to, and feedback on  the trainee.</p>
       </div>
     </div>
   </div>
@@ -41,7 +42,9 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Trainee</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text">A person undergoing training, gain skills, 
+            experience of all aspects of selected career. Click to manage trainee
+        </p>
       </div>
     </div>
   </div>
@@ -49,7 +52,7 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Batch</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text">Batch is a group of trainee who have joined on same period and learn new skills together on the same topic. Click to manage batch</p>
       </div>
     </div>
   </div>
@@ -59,7 +62,7 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Stream</h5>
-        <p class="card-text">Mentor is an advisor, counselor, or guide to a trainee. Click to create, update or delete a mentor</p>
+        <p class="card-text">Click to manage stream. Stream is a software language assigned to the trainee to learn and work with.</p>
       </div>
     </div>
   </div>
@@ -67,7 +70,7 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Topic</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text">Manage topics given to the trainee to learn. Click to Create, update, delete topic</p>
       </div>
     </div>
   </div>
@@ -75,7 +78,7 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">SubTopic</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text">Manage subtopics given to the trainee to learn. Click to Create, update, delete topic</p>
       </div>
     </div>
   </div>
