--- a/iTrainee.MVC/wwwroot/css/site.css
+++ b/iTrainee.MVC/wwwroot/css/site.css
@@ -69,3 +69,17 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.header-nav {
+    background-color: white;
+}
+
+.header-app-name {    
+    color: #00239B;
+    font-size: 30px;    
+}
+
+.header-notification {
+    margin-top: 20px;
+    color: #00239B;
+}
