Created actions navbar

--- a/iTrainee.MVC/Views/Shared/_Layout.cshtml
+++ b/iTrainee.MVC/Views/Shared/_Layout.cshtml
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
-    <header class="header-nav">
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
+    <header>
+        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light bg-custom-light">
             <div>
                 <img src="\css\logo.jpg" width="50" height="50" class="d-inline-block align-top" alt=""> &nbsp;
                 <span class="font-weight-bolder fs-6 header-app-name">iTrainee</span>
@@ -38,7 +38,48 @@
                 </ul>
             </div>
         </nav>
+
+        <nav class="navbar navbar-expand-md actions-nav navbar-dark">
+            <div class="container-fluid">
+
+                <!-- Toggler/collapsibe Button -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <!-- Navbar links -->
+                <div class="collapse navbar-collapse mx-auto" id="collapsibleNavbar">
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item  px-5">
+                            <a class="nav-link text-white" href="#">Mentor</a>
+                        </li>
+                        <li class="nav-item px-5">
+                            <a class="nav-link text-white" href="#">Trainee</a>
+                        </li>
+                        <li class="nav-item px-5">
+                            <a class="nav-link text-white" href="#">Batch</a>
+                        </li>
+                        <li class="nav-item px-5">
+                            <a class="nav-link text-white" href="#">Stream</a>
+                        </li>
+                        <li class="nav-item px-5">
+                            <a class="nav-link text-white" href="#">Topics</a>
+                        </li>
+                        <li class="nav-item px-5">
+                            <a class="nav-link text-white" href="#">Sub Topics</a>
+                        </li>
+                        <li class="nav-item px-5">
+                            <a class="nav-link text-white" href="#">Alert Trainee</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
+
+    <div class="container login-container">
+
+    </div>
 
     <div class="container">
         <main role="main" class="pb-3">
