--- a/iTrainee.MVC/wwwroot/css/site.css
+++ b/iTrainee.MVC/wwwroot/css/site.css
@@ -70,10 +70,6 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-.header-nav {
-    background-color: white;
-}
-
 .header-app-name {    
     color: #00239B;
     font-size: 30px;    
@@ -82,4 +78,9 @@ body {
 .header-notification {
     margin-top: 20px;
     color: #00239B;
+}
+
+.actions-nav {
+    background-color: #00239B;
+    font-size: 17px;
 }
