--- a/iTrainee.MVC/Areas/Mentor/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/index.cshtml
@@ -1,139 +1,154 @@
 ﻿@{
-    ViewData["Title"] = "Mentor";
+	ViewData["Title"] = "Mentor";
 }
 
-<style>
-    .card-hover-effect:hover{
-        cursor: pointer;
-        background-color:#1B6EC2;
-        transition-duration:0.5s;
-        transition-delay:0.1s;
-    }
-</style>
+
+<head>
+	<style>
+		.admin-dashboard-container {
+			margin: auto;
+			width: 90%;
+		}
+
+		.card {
+			border-top: 3px solid rgb(0,35,155);
+		}
+
+/*		.admin-dashboard-row {
+			padding-top: 50px;
+		}*/
+
+		.card:hover {
+			background-image: linear-gradient(144deg,#009ffd, rgb(0,35,155) 50%);
+			border-radius: 8px;
+			box-shadow: rgba(0, 79, 255, 0.3) 0 15px 30px -5px;
+			color: #FFFFFF;
+			cursor: pointer;
+			transform: translateY(-6px);
+			transition: transform 700ms cubic-bezier(.3, .7, .4, 1.5);
+		}
+
+		.card-hover-effect:hover {
+			cursor: pointer;
+			transition-duration: 0.5s;
+			transition-delay: 0.1s;
+		}
+	</style>
+</head>
+
+<div class="admin-dashboard-container">
+	<div class="row row-cols-1 row-cols-md-2 g-4">
 
 
-<div class="modal-body">
-    <div class="mb-lg-5 d-flex">
-        <h1>Hello Mentor</h1>
-        <div class="ml-auto mt-2">
-            @*@Url.Action("actionName", "controllerName", new { Area = "areaName" })*@
-            @*@Html.ActionLink("Trainees", "TraineesList", "Home", new { area = "Trainees" }, null)*@
-           @* @Html.ActionLink("Manage topics", "TopicsList", "Home");*@
-             <a class="btn btn-outline-primary" href="@Url.ActionLink( "TopicsList", "Home", new { Area = "Mentor" })" >Create New</a>
-          @*  <button class="btn btn-primary" onclick='@Html.ActionLink("","TopicsList","~/Mentor/Home" )'>Manage Topics</button>*@
-        </div>
-    </div>
-    <div class="card-group">
-  <div class="card">
-    <div class="card-body card-hover-effect">
-      <h3 class="card-title mb-5">BATCH 1</h3>
-      <div class="d-flex mt-1 mb-1">
-          <h5>Stream:</h5>
-          <p class="ml-3">DOT.NET</p>
-      </div>
-            <div class="d-flex mt-1 mb-1">
-          <h5>No of trainees:</h5>
-          <p class="ml-3">10</p>
-      </div>
-       <div class="d-flex mt-1 mb-1">
-          <h5>Since:</h5>
-          <p class="ml-3">24-07-2021</p>
-      </div>
-      
-    </div>
-  </div>
-   <div class="card">
-    <div class="card-body card-hover-effect">
-      <h3 class="card-title mb-5">BATCH 2</h3>
-      <div class="d-flex mt-1 mb-1">
-          <h5>Stream:</h5>
-          <p class="ml-3">JAVA</p>
-      </div>
-            <div class="d-flex mt-1 mb-1">
-          <h5>No of trainees:</h5>
-          <p class="ml-3">12</p>
-      </div>
-       <div class="d-flex mt-1 mb-1">
-          <h5>Since:</h5>
-          <p class="ml-3">02-08-2021</p>
-      </div>
-      
-    </div>
-  </div>
-    <div class="card">
-    <div class="card-body card-hover-effect">
-      <h3 class="card-title mb-5">BATCH 3</h3>
-      <div class="d-flex mt-1 mb-1">
-          <h5>Stream:</h5>
-          <p class="ml-3">ANGULAR</p>
-      </div>
-            <div class="d-flex mt-1 mb-1">
-          <h5>No of trainees:</h5>
-          <p class="ml-3">7</p>
-      </div>
-       <div class="d-flex mt-1 mb-1">
-          <h5>Since:</h5>
-          <p class="ml-3">18-08-2021</p>
-      </div>
-      
-    </div>
-  </div>
-  </div>
-   <div class="card-group">
-        <div class="card">
-    <div class="card-body card-hover-effect">
-      <h3 class="card-title mb-5">BATCH 4</h3>
-      <div class="d-flex mt-1 mb-1">
-          <h5>Stream:</h5>
-          <p class="ml-3">C#</p>
-      </div>
-            <div class="d-flex mt-1 mb-1">
-          <h5>No of trainees:</h5>
-          <p class="ml-3">5</p>
-      </div>
-       <div class="d-flex mt-1 mb-1">
-          <h5>Since:</h5>
-          <p class="ml-3">22-08-2021</p>
-      </div>
-      
-    </div>
-  </div>
-    <div class="card">
-    <div class="card-body card-hover-effect">
-      <h3 class="card-title mb-5">BATCH 5</h3>
-      <div class="d-flex mt-1 mb-1">
-          <h5>Stream:</h5>
-          <p class="ml-3">PYTHON</p>
-      </div>
-            <div class="d-flex mt-1 mb-1">
-          <h5>No of trainees:</h5>
-          <p class="ml-3">8</p>
-      </div>
-       <div class="d-flex mt-1 mb-1">
-          <h5>Since:</h5>
-          <p class="ml-3">30-08-2021</p>
-      </div>
-      
-    </div>
-  </div>
-    <div class="card">
-    <div class="card-body card-hover-effect">
-      <h3 class="card-title mb-5">BATCH 6</h3>
-      <div class="d-flex mt-1 mb-1">
-          <h5>Stream:</h5>
-          <p class="ml-3">REACT</p>
-      </div>
-            <div class="d-flex mt-1 mb-1">
-          <h5>No of trainees:</h5>
-          <p class="ml-3">10</p>
-      </div>
-       <div class="d-flex mt-1 mb-1">
-          <h5>Since:</h5>
-          <p class="ml-3">06-09-2021</p>
-      </div>
-      
-    </div>
-  </div>
-  
+		<div class="col">
+			<div class="card mt-5">
+				<div class="card-body card-hover-effect">
+					<h3 class="card-title mb-5">BATCH 1</h3>
+					<div class="d-flex mt-1 mb-1">
+						<h5>Stream:</h5>
+						<p class="ml-3">DOT.NET</p>
+					</div>
+					<div class="d-flex mt-1 mb-1">
+						<h5>No of trainees:</h5>
+						<p class="ml-3">10</p>
+					</div>
+					<div class="d-flex mt-1 mb-1">
+						<h5>Since:</h5>
+						<p class="ml-3">24-07-2021</p>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="col">
+			<div class="card mt-5">
+				<div class="card-body card-hover-effect">
+					<h3 class="card-title mb-5">BATCH 1</h3>
+					<div class="d-flex mt-1 mb-1">
+						<h5>Stream:</h5>
+						<p class="ml-3">DOT.NET</p>
+					</div>
+					<div class="d-flex mt-1 mb-1">
+						<h5>No of trainees:</h5>
+						<p class="ml-3">10</p>
+					</div>
+					<div class="d-flex mt-1 mb-1">
+						<h5>Since:</h5>
+						<p class="ml-3">24-07-2021</p>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+
+		<div class="col">
+			<div class="card mt-5">
+				<div class="card-body card-hover-effect">
+					<h3 class="card-title mb-5">BATCH 1</h3>
+					<div class="d-flex mt-1 mb-1">
+						<h5>Stream:</h5>
+						<p class="ml-3">DOT.NET</p>
+					</div>
+					<div class="d-flex mt-1 mb-1">
+						<h5>No of trainees:</h5>
+						<p class="ml-3">10</p>
+					</div>
+					<div class="d-flex mt-1 mb-1">
+						<h5>Since:</h5>
+						<p class="ml-3">24-07-2021</p>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+
+		<div class="col">
+			<div class="card mt-5">
+				<div class="card-body card-hover-effect">
+					<h3 class="card-title mb-5">BATCH 1</h3>
+					<div class="d-flex mt-1 mb-1">
+						<h5>Stream:</h5>
+						<p class="ml-3">DOT.NET</p>
+					</div>
+					<div class="d-flex mt-1 mb-1">
+						<h5>No of trainees:</h5>
+						<p class="ml-3">10</p>
+					</div>
+					<div class="d-flex mt-1 mb-1">
+						<h5>Since:</h5>
+						<p class="ml-3">24-07-2021</p>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+
+		<div class="col">
+			<div class="card mt-5">
+				<div class="card-body card-hover-effect">
+					<h3 class="card-title mb-5">BATCH 1</h3>
+					<div class="d-flex mt-1 mb-1">
+						<h5>Stream:</h5>
+						<p class="ml-3">DOT.NET</p>
+					</div>
+					<div class="d-flex mt-1 mb-1">
+						<h5>No of trainees:</h5>
+						<p class="ml-3">10</p>
+					</div>
+					<div class="d-flex mt-1 mb-1">
+						<h5>Since:</h5>
+						<p class="ml-3">24-07-2021</p>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
-</div>
+
+
+
