--- a/iTrainee.MVC/Areas/Admin/Views/Home/CreateTrainee.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/CreateTrainee.cshtml
@@ -1,59 +1,58 @@
-﻿@model iTrainee.Models.User
+﻿@model IEnumerable<iTrainee.Models.User>
 
 @{
-    ViewData["Title"] = "CreateTrainee";
+    ViewData["Title"] = "Index";
 }
 
-<div class="row justify-content-center">
-    <div class="col-md-4">
-        <h4 class="mt-5 mb-4">Add New Trainee</h4>
-        <form asp-action="CreateTrainee">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="FirstName" class="control-label">First Name</label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastName" class="control-label mb-2 mr-sm-auto">Last Name</label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DOB" class="control-label mb-2 mr-sm-auto">Date Of Birth</label>
-                <input asp-for="DOB" class="form-control" type="date"/>
-                <span asp-validation-for="DOB" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="RoleId" class="control-label mb-2 mr-sm-auto">Role Id</label>
-                <input asp-for="RoleId" class="form-control" />
-                <span asp-validation-for="RoleId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Qualification" class="control-label mb-2 mr-sm-auto">Qualification</label>
-                <input asp-for="Qualification" class="form-control" />
-                <span asp-validation-for="Qualification" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UserName" class="control-label mb-2 mr-sm-auto">User Name</label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label mb-2 mr-sm-auto">Password</label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-        <div>
-    <a asp-action="Index">Back to List</a>
+<div class="create">
+    <a data-toggle="modal" data-target="#save"><i class="fa fa-user-plus"></i>Create New</a>
 </div>
-    </div>
-</div>
+<table class="table table-hover">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Id)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FirstName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.LastName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DOB)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Qualification)
+        </th>
+        <th></th>
+    </tr>
 
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @item.DOB.ToString("dd/MM/yyyy")
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Qualification)
+            </td>
+            <td>
+                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#save" data-id="@item.Id"><i class="fa fa-pencil"></i> Edit</button>
+                <button type="button" class="btn btn-danger btn-xs delete-button" data-id-to-delete="@item.Id" data-toggle="modal" data-target="#delete"><i class="fa fa-trash"></i> Delete</button>
+            </td>
+        </tr>
+    }
+
+</table>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
