Data access layer

--- a/iTrainee.MVC/Areas/Admin/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/index.cshtml
@@ -9,7 +9,7 @@
             width: 90%;
         }
         .card {
-            border-top: 3px solid hsl(212, 86%, 64%);
+            border-top: 3px solid rgb(0,35,155);
         }
 
         .admin-dashboard-row {
@@ -17,7 +17,7 @@
         }
 
         .card:hover {
-            background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+            background-image: linear-gradient(144deg,#009ffd, rgb(0,35,155) 50%);
             border-radius: 8px;
             box-shadow: rgba(0, 79, 255, 0.3) 0 15px 30px -5px;
             color: #FFFFFF;
