--- a/iTrainee.MVC/Areas/Mentor/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/index.cshtml
@@ -36,6 +36,14 @@
 	</style>
 </head>
 
+    <div class="mb-lg-5 d-flex">
+        <h1>Hello Mentor</h1>
+        <div class="ml-auto mt-2">
+             <a class="btn btn-outline-primary" href="../Home/ManageTopics" >Manage Topics</a>
+        </div>
+    </div>
+
+
 <div class="admin-dashboard-container">
 	<div class="row row-cols-1 row-cols-md-2 g-4">
 
