--- a/iTrainee.MVC/Areas/Mentor/Views/Home/ManageTopics.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/ManageTopics.cshtml
@@ -1,82 +1,122 @@
 ﻿@model IEnumerable<iTrainee.Models.Topics>
 
 @{
-    ViewData["Title"] = "ManageTopics";
+	ViewData["Title"] = "ManageTopics";
 }
 
 <h1>ManageTopics</h1>
 
-<p>
-    <a asp-action="CreateTopic">ADD NEW TOPIC</a>
-</p>
+<button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#save">Add New Topic</button>
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StreamId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ReferenceURL)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsActive)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.InsertedBy)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.InsertedOn)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UpdatedBy)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UpdatedOn)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StreamId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ReferenceURL)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsActive)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.InsertedBy)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.InsertedOn)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdatedBy)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdatedOn)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
-    </tbody>
+	<thead>
+		<tr>
+			<th>
+				Id
+
+			</th>
+			<th>
+				Stream Id
+			</th>
+			<th>
+				Name
+			</th>
+			<th>
+				Reference URL
+			</th>
+			<th>
+				Is Active
+			</th>
+			<th>
+				Inserted By
+			</th>
+			<th>
+				Inserted On
+			</th>
+			<th>
+				Updated By
+			</th>
+			<th>
+				Updated On
+			</th>
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
+		@foreach (var item in Model)
+		{
+			<tr>
+				<td>
+					@Html.DisplayFor(modelItem => item.Id)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.StreamId)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.Name)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.ReferenceURL)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.IsActive)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.InsertedBy)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.InsertedOn)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.UpdatedBy)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.UpdatedOn)
+				</td>
+				<td>
+					@Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+					@Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+				</td>
+			</tr>
+		}
+	</tbody>
 </table>
+
+
+
+
+<div class="modal fade" id="save" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="exampleModalLabel">Save Mentor</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<form id="edit-form">
+					<div class="form-group">
+						<input type="hidden" class="form-control" name="Id" id="id">
+					</div>
+					<div class="form-group">
+						<div class="col-md-4" style="width: 36%;">
+							<label class="col-form-label">Stream</label>
+							@Html.DropDownList("StreamList", "Select stream")
+						</div>
+					</div>
+					<div class="form-group">
+						<label class="col-form-label">Name</label>
+						<input type="text" class="form-control" name="Name" id="name" />
+					</div>
+					<div class="form-group">
+						<label class="col-form-label">Reference URL</label>
+						<input type="text" class="form-control" name="ReferenceURL" id="referenceURL" />
+					</div>
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					@Html.AntiForgeryToken()
+					<input type="submit" id="save-edit-button" class="btn btn-success" value="Save" name="submit" />
+				</form>
+			</div>
+		</div>
+	</div>
+</div>
