--- a/iTrainee.MVC/Views/Shared/_Layout.cshtml
+++ b/iTrainee.MVC/Views/Shared/_Layout.cshtml
@@ -9,122 +9,77 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light bg-custom-light">
-            <div>
-                <img src="\css\logo.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
-                <span class="font-weight-bolder fs-6 header-app-name px-3">iTrainee</span>
-            </div>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    @if (!ViewData["Title"].Equals("Login Page"))
+    {
+        <header>
+            <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light bg-custom-light">
+                <div>
+                    <img src="\css\logo.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
+                    <span class="font-weight-bolder fs-6 header-app-name px-3">iTrainee</span>
+                </div>
 
-            <div id="navbarCollapse" class="collapse navbar-collapse">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item  px-2">
-                        <i class="header-notification fa-lg fa fa-bell-o"></i>
-                    </li>
-                    <li class="nav-item dropdown px-2">
-                        <a class="text-dark nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img src="\css\logo.jpg" width="40" height="40" class="rounded-circle"> <span class="px-2">User_Name</span>
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Profile</a>
-                            <a class="dropdown-item" href="#">Change Password</a>
-                            <a class="dropdown-item" href="#">Sign Out</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-
-        <nav class="navbar navbar-expand-md actions-nav">
-            <div class="container-fluid">
-
-                <!-- Toggler/collapsibe Button -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <!-- Navbar links -->
-                <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="#">Mentor</a>
+                <div id="navbarCollapse" class="collapse navbar-collapse">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item  px-2">
+                            <i class="header-notification fa-lg fa fa-bell-o"></i>
                         </li>
-                        <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="#">Trainee</a>
-                        </li>
-                        <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="#">Batch</a>
-                        </li>
-                        <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="#">Stream</a>
-                        </li>
-                        <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="#">Topics</a>
-                        </li>
-                        <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="#">Sub Topics</a>
-                        </li>
-                        <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="#">Alert Trainee</a>
+                        <li class="nav-item dropdown px-2">
+                            <a class="text-dark nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <img src="\css\logo.jpg" width="40" height="40" class="rounded-circle"> <span class="px-2">User_Name</span>
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" href="#">Profile</a>
+                                <a class="dropdown-item" href="#">Change Password</a>
+                                <a class="dropdown-item" href="#">Sign Out</a>
+                            </div>
                         </li>
                     </ul>
                 </div>
-            </div>
-        </nav>
-    </header>
+            </nav>
 
-    <div class="container login-container">
-        <div class="container py-5 h-100">
-            <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col col-xl-10">
-                    <div class="card" style="border-radius: 1rem;">
-                        <div class="row g-0">
-                            <div class="col-md-6 col-lg-5 d-none d-md-block">
-                            </div>
-                            <div class="col-md-6 col-lg-7 d-flex align-items-center">
-                                <div class="card-body p-4 p-lg-5 text-black">
+            <nav class="navbar navbar-expand-md actions-nav">
+                <div class="container-fluid">
 
-                                    <form>
+                    <!-- Toggler/collapsibe Button -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-                                        <div class="d-flex align-items-center mb-3 pb-1">
-                                            <div>
-                                                <img src="\css\logo.jpg" width="100" height="100" class="d-inline-block align-top" alt=""> &nbsp;
-                                                <span class="font-weight-bolder fs-6 login-app-name">iTrainee</span>
-                                            </div>
-                                        </div>
-
-                                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
-
-                                        <div class="form-outline mb-4">
-                                            <input type="email" id="form2Example17" class="form-control form-control-lg" />
-                                            <label class="form-label" for="form2Example17">Email address</label>
-                                        </div>
-
-                                        <div class="form-outline mb-4">
-                                            <input type="password" id="form2Example27" class="form-control form-control-lg" />
-                                            <label class="form-label" for="form2Example27">Password</label>
-                                        </div>
-
-                                        <div class="pt-1 mb-4">
-                                            <button class="btn btn-dark btn-lg btn-block" type="button">Login</button>
-                                        </div>
-
-                                        <a class="big text-muted text-decoration-none" href="#!">Forgot password?</a>
-                                        
-                                    </form>
-
-                                </div>
-                            </div>
-                        </div>
+                    <!-- Navbar links -->
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item px-3">
+                                <a class="nav-link text-white" href="#">Mentor</a>
+                            </li>
+                            <li class="nav-item px-3">
+                                <a class="nav-link text-white" href="#">Trainee</a>
+                            </li>
+                            <li class="nav-item px-3">
+                                <a class="nav-link text-white" href="#">Batch</a>
+                            </li>
+                            <li class="nav-item px-3">
+                                <a class="nav-link text-white" href="#">Stream</a>
+                            </li>
+                            <li class="nav-item px-3">
+                                <a class="nav-link text-white" href="#">Topics</a>
+                            </li>
+                            <li class="nav-item px-3">
+                                <a class="nav-link text-white" href="#">Sub Topics</a>
+                            </li>
+                            <li class="nav-item px-3">
+                                <a class="nav-link text-white" href="#">Alert Trainee</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
+            </nav>
+        </header>
+    }
 
     <div class="container">
         <main role="main" class="pb-3">
@@ -132,11 +87,14 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - iTrainee
-        </div>
-    </footer>
+    @if (!ViewData["Title"].Equals("Login Page"))
+    {
+        <footer class="border-top footer text-muted">
+            <div class="container">
+                &copy; 2022 - iTrainee
+            </div>
+        </footer>
+    }
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
