--- a/iTrainee.MVC/Areas/Mentor/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/index.cshtml
@@ -39,7 +39,9 @@
     <div class="mb-lg-5 d-flex">
         <h1>Hello Mentor</h1>
         <div class="ml-auto mt-2">
-             <a class="btn btn-outline-primary" href="../Home/ManageTopics" >Manage Topics</a>
+            @* <a class="btn btn-outline-primary" href="../Home/ManageTopics" >Manage Topics</a>*@
+			@* @Html.ActionLink("Manage Topics", "ManageTopics", "Home", new {Area="Mentor"}, new {})*@
+			 @Html.ActionLink("home", "Index", new { area = "Mentor", controller = "Home" })
         </div>
     </div>
 
