--- a/iTrainee.MVC/Areas/Mentor/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/index.cshtml
@@ -40,6 +40,7 @@
         <h1>Hello Mentor</h1>
         <div class="ml-auto mt-2">
              <a class="btn btn-outline-primary" href="../Home/ManageTopics" >Manage Topics</a>
+			@* @Html.ActionLink("Manage Topics", "ManageTopics", "Home", new {Area="Mentor"}, new {})*@
         </div>
     </div>
 
