--- a/iTrainee.MVC/Views/Home/Login.cshtml
+++ b/iTrainee.MVC/Views/Home/Login.cshtml
@@ -2,12 +2,12 @@
     ViewData["Title"] = "Login Page";
 }
 
-<div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-xl-9">
+<div class="container">
+    <div class="row d-flex pt-4 justify-content-center align-items-center">
+        <div class="col-xl-7">
             <div class="card rounded-3 text-black">
                 <div class="row g-0">
-                    <div class="col-lg-5 d-flex align-items-center gradient-custom-2">
+                    <div class="col-md-5 col-md-5 d-flex align-items-center login-gradient">
                         <div class="text-white p-md-3 mx-md-3">
                             <h4 class="font-weight-bold mb-4">About Ideas2IT</h4>
                             <p class="big mb-0">
@@ -15,30 +15,28 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-7 d-flex align-items-center">
-                        <div class="card-body p-4 p-lg-5 text-black">
+                    <div class="col-md-6 col-md-7 d-flex align-items-center">
+                        <div class="card-body px-4 py-5 text-black">
                             <form>
-                                <div class="d-flex align-items-center mb-3 pb-1">
-                                    <div>
-                                        <img src="\css\logo.jpg" width="100" height="100" class="d-inline-block align-top" alt=""> &nbsp;
-                                        <span class="text-align-centre font-weight-bolder fs-6 login-app-name">iTrainee</span>
-                                    </div>
+                                <div class="d-flex mb-3">
+                                    <img src="\css\logo.jpg" width="90" height="90" class="d-inline-block align-top" alt="">
+                                    <span class="text-center font-weight-bolder fs-5 login-app-name">iTrainee</span>
                                 </div>
 
-                                <h5 class="font-weight-bold text-muted pt-4 mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+                                <h6 class="text-muted mb-3 pt-4" style="letter-spacing: 1px;">Sign-in to your account</h6>
 
-                                <div class="form-outline mb-4">
+                                <div class="form-outline mb-3">
                                     <label class="form-label" for="form2Example17">Email address</label>
-                                    <input type="email" id="form2Example17" class="form-control form-control-lg" />
+                                    <input type="email" id="form2Example17" class="form-control form-control-sm" />
                                 </div>
 
-                                <div class="form-outline mb-4">
+                                <div class="form-outline mb-3">
                                     <label class="form-label" for="form2Example27">Password</label>
-                                    <input type="password" id="form2Example27" class="form-control form-control-lg" />
+                                    <input type="password" id="form2Example27" class="form-control form-control-sm" />
                                 </div>
 
-                                <div class="pt-1 mb-4">
-                                    <button class="btn text-white gradient-custom-2 btn-lg btn-block" type="button">Login</button>
+                                <div class="pt-2 mb-2">
+                                    <button class="btn text-white login-gradient btn-md btn-block" type="button">Login</button>
                                 </div>
 
                                 <a class="big text-muted text-decoration-none" href="#!">Forgot password?</a>
