Login page and Action header updated

--- a/iTrainee.MVC/Views/Home/Login.cshtml
+++ b/iTrainee.MVC/Views/Home/Login.cshtml
@@ -8,9 +8,9 @@
             <div class="card rounded-3 text-black">
                 <div class="row g-0">
                     <div class="rounded-left col-md-5 col-md-5 d-flex align-items-center login-gradient">
-                        <div class="text-white p-md-3 mx-md-3">
+                        <div class="text-white px-md-0 mx-md-3 justify-content-center">
                             <h4 class="font-weight-bold mb-4">About Ideas2IT</h4>
-                            <p class="big mb-0">
+                            <p>
                                 We're still growing. Our Data Science practice is over 30 strong, our Blockchain practice is over 15 strong, and our projects just get better and better. We're excited for the future!
                             </p>
                         </div>
