--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -62,6 +62,9 @@
                         <a class="nav-link text-white" href="#">Sub Topics</a>
                     </li>
                     <li class="nav-item px-3">
+                        <a class="nav-link text-white" href="#">Daily Progress</a>
+                    </li>
+                    <li class="nav-item px-3">
                         <a class="nav-link text-white" href="#">Alert Trainee</a>
                     </li>
                 </ul>
