--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -43,27 +43,30 @@
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item px-3">
-                        <a class="nav-link text-white" href="#">Mentor</a>
-                    </li>
-                    <li class="nav-item px-3">
-                        <a class="nav-link text-white" href="#">Trainee</a>
-                    </li>
-                    <li class="nav-item px-3">
-                        <a class="nav-link text-white" href="#">Batch</a>
-                    </li>
-                    <li class="nav-item px-3">
-                        <a class="nav-link text-white" href="#">Stream</a>
-                    </li>
-                    <li class="nav-item px-3">
-                        <a class="nav-link text-white" href="#">Topics</a>
-                    </li>
-                    <li class="nav-item px-3">
-                        <a class="nav-link text-white" href="#">Sub Topics</a>
-                    </li>
-                    <li class="nav-item px-3">
-                        <a class="nav-link text-white" href="#">Daily Progress</a>
-                    </li>
+                    @if (!ViewData["Title"].Equals("Mentor"))
+                    {
+                        <li class="nav-item px-3">
+                            <a class="nav-link text-white" href="#">Mentor</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link text-white" href="#">Trainee</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link text-white" href="#">Batch</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link text-white" href="#">Stream</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link text-white" href="#">Topics</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link text-white" href="#">Sub Topics</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link text-white" href="#">Daily Progress</a>
+                        </li>
+                    }
                     <li class="nav-item px-3">
                         <a class="nav-link text-white" href="#">Alert Trainee</a>
                     </li>
