changed configurationservices in startup.cs

--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageMentor.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageMentor.cshtml
@@ -229,7 +229,7 @@
     //    });
     //})
 
-    function checkValidationAndSaveForm() {
+    //function checkValidationAndSaveForm() {
 //        $("#edit-form").validate({
 //            errorClass: 'error',
 //            rules: {
