Completed GetAll and Delete flow in stream

--- a/iTrainee.MVC/Areas/Mentor/Views/Home/ManageStreams.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/ManageStreams.cshtml
@@ -37,6 +37,8 @@
 
             <td>
                 <a><i class="glyphicon glyphicon-pencil"></i></a>
+                <a href="#" class="btn btn-primary" ><i class="glyphicon glyphicon-pencil"></i> Edit</a>
+
                 @*@Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ })*@ |
                 <a class="btn btn-outline-primary" href="/Shared/Stream/DeleteStream/@item.Id" >Delete</a>
                 @*@Html.ActionLink("Delete", "DeleteStream", "Stream", new {  area="Shared", id=item.Id  },new{})*@
