--- a/iTrainee.MVC/Areas/Mentor/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/index.cshtml
@@ -39,16 +39,8 @@
 	</style>
 </head>
 
-    <div class="mb-lg-5 d-flex">
-        <h1>Hello Mentor</h1>
-        <div class="ml-auto mt-2">
-			<a class="btn btn-outline-primary" href="/Mentor/Home/ManageStreams" >Manage Streams</a>
-			@*<a href="@Url.Action("ManageStreams","Home",new {Area="Mentor"})">Manage Streams</a>*@ 
-			@*<a asp-area="Mentor" asp-controller="Home" asp-action="ManageStreams">Manage Streams</a>*@
-             @*<a class="btn btn-outline-primary" href="../Home/ManageTopics" >Manage Topics</a>*@
-			 @Html.ActionLink("Manage Topics", "ManageTopics", "Home", new {Area="Mentor"})
-			@* @Html.ActionLink("home", "ManageTopics", new { area = "Mentor", controller = "Home" })*@
-        </div>
+    <div class=" mt-5">
+        <h1>Hello Mentor,</h1>
     </div>
 
 
