--- a/iTrainee.MVC/Areas/Admin/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/index.cshtml
@@ -31,12 +31,14 @@
 <div class="admin-dashboard-container">
 <div class="row row-cols-1 row-cols-md-2 g-4 admin-dashboard-row">
   <div class="col">
+      <a href="../Home/ManageMentor">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Mentor</h5>
         <p class="card-text">Mentor is an advisor, counselor, or guide to a trainee. The mentor provides support to, and feedback on  the trainee.</p>
       </div>
     </div>
+    </a>
   </div>
   <div class="col">
     <div class="card">
